--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@mdi/js": "^4.1.95",
     "@mdi/react": "^1.2.1",
     "@meldcx/agent": "1.0.31",
-    "cypress": "^3.4.1",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "howler": "^2.1.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-spinners": "^0.6.1",
     "serialize-javascript": "2.1.1",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "supertest": "^7.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -33,19 +34,21 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/howler": "^2.1.1",
-    "@types/jest": "^24.0.18",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^24.0.8",
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
     "@types/styled-components": "^4.1.18",
     "copy-webpack-plugin": "^5.0.4",
+    "cypress": "^14.5.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.9.0",
+    "jest": "^29.7.0",
     "source-map-loader": "^0.2.4",
     "start-server-and-test": "^1.10.0",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^29.4.0",
     "ts-loader": "^6.0.4",
-    "typescript": "^3.6.2",
+    "typescript": "4.9",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0"
